--- a/options/options.html
+++ b/options/options.html
@@ -14,14 +14,6 @@
             color: #333;
         }
 
-        #login-options {
-            margin-top: 20px;
-        }
-
-        input[type="radio"] {
-            margin-right: 10px;
-        }
-
         button {
             margin-top: 10px;
             padding: 10px 15px;
@@ -57,35 +49,22 @@
             color: red;
             margin-top: 10px;
         }
-        
-        .disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
 
-        .disabled:hover {
-            background-color: #ccc;
-        }
-        
-        #error-message {
-            display: none;
+        .success {
+            color: green;
+            margin-top: 10px;
         }
     </style>
 </head>
 
 <body>
     <h1>Options</h1>
-    <div id="login-options">
-        <input type="radio" id="personal-access-token" value="PAC" name="login-option" checked>
-        <label for="personal-access-token">Use Personal Access Token</label><br>
-        <input type="text" id="token" name="token" placeholder="Enter your token here"><br><br>
-        <!-- TODO: Implement OAuth login
-        <input type="radio" id="oauth" value="OAuth" name="login-option">
-        <label for="oauth">Login with GitHub</label><br>
-        <button id="login-button" class="disabled">Login with GitHub</button>
-        -->
+    <div id="token-options">
+        <label for="token">Personal Access Token:</label><br>
+        <input type="text" id="token" name="token" placeholder="Enter your token here" autocomplete="off"/><br>
+        <button id="save-token">Save Token</button>
     </div>
-    <div id="error-message" class="error"></div>
+    <div id="message" class=""></div>
     <script src="options.js"></script>
 </body>
 
