Enhances issue task progress tracking
Added:
- Rate limit handling
- SVG circle
- Button to navigate to the GitHub token settings page

--- a/options/options.html
+++ b/options/options.html
@@ -63,6 +63,7 @@
         <label for="token">Personal Access Token:</label><br>
         <input type="text" id="token" name="token" placeholder="Enter your token here" autocomplete="off"/><br>
         <button id="save-token">Save Token</button>
+        <button id="get-token">Get Token</button>
     </div>
     <div id="message" class=""></div>
     <script src="options.js"></script>
