--- a/options/options.html
+++ b/options/options.html
@@ -8,10 +8,9 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-        }
-
-        h1 {
-            color: #333;
+            color-scheme: light dark;
+            background-color: Canvas;
+            color: CanvasText;
         }
 
         button {
