--- a/options/options.html
+++ b/options/options.html
@@ -44,6 +44,11 @@
             font-weight: bold;
         }
 
+        #message {
+            display: inline-block;
+            padding: 7px;
+        }
+
         .error {
             color: red;
             margin-top: 10px;
@@ -57,14 +62,17 @@
 </head>
 
 <body>
-    <h1>Options</h1>
     <div id="token-options">
         <label for="token">Personal Access Token:</label><br>
         <input type="text" id="token" name="token" placeholder="Enter your token here" autocomplete="off"/><br>
         <button id="save-token">Save Token</button>
         <button id="get-token">Get Token</button>
+        <div id="message" class=""></div>
+        <div id="infoAboutToken"><p>A GitHub token is required <u>only</u> for the main issues page.</p></div>
     </div>
-    <div id="message" class=""></div>
+    <div id="customization-options">
+        <!-- TODO: Add customization options here -->
+    </div>
     <script src="options.js"></script>
 </body>
 
