--- a/options/options.html
+++ b/options/options.html
@@ -40,8 +40,8 @@
             outline: none;
         }
 
-        label {
-            font-weight: bold;
+        #customization-options input[type="checkbox"] {
+            vertical-align: middle;
         }
 
         #message {
@@ -63,15 +63,20 @@
 
 <body>
     <div id="token-options">
-        <label for="token">Personal Access Token:</label><br>
+        <label for="token" style="font-weight: bold;">Personal Access Token:</label><br>
         <input type="text" id="token" name="token" placeholder="Enter your token here" autocomplete="off"/><br>
         <button id="save-token">Save Token</button>
         <button id="get-token">Get Token</button>
         <div id="message" class=""></div>
         <div id="infoAboutToken"><p>A GitHub token is required <u>only</u> for the main issues page.</p></div>
     </div>
+    <hr style="margin-top: 20px">
     <div id="customization-options">
-        <!-- TODO: Add customization options here -->
+        <h3>Customization Options</h3>
+        <label for="incomplete-icon-checkbox">Show incomplete icon:</label>
+        <input type="checkbox" id="incomplete-icon-checkbox" name="incomplete-icon-checkbox"><br>
+        <label for="completed-icon-checkbox">Show completed icon:</label>
+        <input type="checkbox" id="completed-icon-checkbox" name="completed-icon-checkbox"><br>
     </div>
     <script src="options.js"></script>
 </body>
