--- a/options/options.html
+++ b/options/options.html
@@ -40,6 +40,14 @@
             outline: none;
         }
 
+        .reset {
+            background-color: #dc3545;
+        }
+
+        .reset:hover {
+            background-color: #a01c29;
+        }
+
         #customization-options input[type="checkbox"] {
             vertical-align: middle;
         }
@@ -77,6 +85,7 @@
         <input type="checkbox" id="incomplete-icon-checkbox" name="incomplete-icon-checkbox"><br>
         <label for="completed-icon-checkbox">Show completed icon:</label>
         <input type="checkbox" id="completed-icon-checkbox" name="completed-icon-checkbox"><br>
+        <button id="reset-customization" class="reset">Reset customization settings</button>
     </div>
     <script src="options.js"></script>
 </body>
