--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -6,16 +6,17 @@
     <title>API Status</title>
     <style>
         body {
+            width: 13em;
             font-family: Arial, sans-serif;
             padding: 15px;
             color-scheme: light dark;
             background-color: Canvas;
             color: CanvasText;
             border: 1px solid CanvasText;
+            font-size: 1em;
         }
 
         h1 {
-            font-size: 24px;
             margin-bottom: 10px;
             margin-top: 0px;
         }
@@ -31,9 +32,15 @@
 
         progress {
             width: 100%;
-            height: 20px;
+            height: 15px;
             background-color: Canvas;
             color: CanvasText;
+        }
+
+        #progressContainer {
+            border-radius: 20px;
+            overflow-y: hidden;
+            width: 100%;
         }
 
         input[type="text"] {
@@ -91,7 +98,9 @@
     <div id="rateLimitDiv">
         <label for="rateLimit">Quota left:</label>
         <div id="rateLimitDivBox">
-            <progress id="rateLimit" value="0" max="100" class="lowProgress"></progress>
+            <div id="progressContainer">
+                <progress id="rateLimit" value="0" max="5000" class="lowProgress"></progress>
+            </div>
             <span id="rateLimitValue">0%</span>
         </div>
     </div>
